<resources>
    <string name="app_name">OurWall</string>

    <!-- Permissions -->
    <string name="denegatePermissions">Denegados los permisos en la aplicación, permita usar su localización</string>
    <string name="grantedPermissions">La aplicación tiene los permisos requeridos</string>
    <string name="locationPermission">Permiso de localización necesario</string>
    <string name="configurar">Configuración</string>

    <!-- UI MESSAGES -->
    <string name="dialog_title">Ayuda</string>
    <string name="dialog_button">Vale</string>
    <string name="dialog_message1">· Utiliza un correo electrónico válido \n\n · La contraseña tiene que ser de más de 5 carácteres</string>
    <string name="err_login">Datos de acceso incorrectos</string>
    <string name="err_user">Este usuario ya existe</string>
    <string name="err_email">Email incorrecto</string>
    <string name="err_getData">Error al recoger los datos</string>
    <string name="err_lenght">Introduce un texto más largo</string>

    <!-- LOGIN VIEW -->
    <string name="appName">Our Wall</string>
    <string name="correoHint">Correo electrónico</string>
    <string name="passwdHint">Contraseña</string>
    <string name="loginText">ENTRAR</string>
    <string name="registerText">CREAR CUENTA</string>
    <string name="imageDescr">ShowPass</string>

    <!-- PROFILE VIEW -->
    <string name="profile_dialogNotiTitle">Cuidado</string>
    <string name="profile_dialogNotiMes1">Has desactivado las notificaciones</string>
    <string name="profile_dialogNotiMes2">Acabas de activar las notificaciones</string>
    <string name="profile_dialogAreaMes1">Has desactivado las notificaciones en </string>
    <string name="profile_dialogAreaMes2">Acabas de activar las notificaciones en </string>

    <!-- MAPS VIEW -->
    <string name="pos">Tu posición</string>

    <!-- SHARE VIEW -->
    <string name="shareView_choose">Elige una</string>
    <string name="shareView_image">Vas a añadir una imagen</string>
    <string name="shareView_sound">Vas a añadir un sonido</string>
    <string name="shareView_text">Vas a añadir un texto</string>
    <string name="shareView_err_upload">Ha habido un problema, vuelve a intentarlo</string>
    <string name="shareView_suc_upload">Archivo subido correctamente</string>

    <!-- MENU -->
    <string name="footerMenu_profile">Perfil</string>
    <string name="footerMenu_share">Comparte</string>
    <string name="footerMenu_map">Mapa</string>

    <string-array name="community">
        <item>Todas las ciudades</item>
        <item>Valencia</item>
        <item>Madrid</item>
        <item>Cocina</item>
        <item>Estudio</item>
        <item>Dormitorio pequeño</item>
        <item>Dormitorio grande</item>
        <item>Baño pequeño</item>
        <item>Baño grande</item>
    </string-array>

</resources>
