<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_mainLayout"
    android:background="@drawable/ourwallbackground">

    <TextView
        android:id="@+id/main_logoN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/WhiteSmoke"
        android:textSize="@dimen/loginView_textSize"
        android:text="@string/appName"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/main_textInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_above="@+id/main_layTextInputPassword"
        app:errorEnabled="true"
        app:counterTextAppearance="@color/WhiteSmoke"
        android:textColorHint="@color/WhiteSmoke">

        <EditText
            android:id="@+id/main_emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:backgroundTint="@color/WhiteSmoke"
            android:textColor="@color/WhiteSmoke"
            android:textColorHint="@color/WhiteSmoke"
            android:hint="@string/correoHint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:errorEnabled="true" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/main_layTextInputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/main_textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:errorEnabled="true"
            app:counterTextAppearance="@color/WhiteSmoke"
            android:textColorHint="@color/WhiteSmoke">

            <EditText
                android:id="@+id/main_passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:textColor="@color/WhiteSmoke"
                android:backgroundTint="@color/WhiteSmoke"
                android:textColorHint="@color/WhiteSmoke"
                android:hint="@string/passwdHint"
                android:inputType="textPassword"
                android:maxLines="1"
                app:errorEnabled="true" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/main_showPassword"
            android:contentDescription="@string/imageDescr"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:onClick="showText"
            android:src="@drawable/ic_eye_white_48dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/main_layTextInputPassword"
        android:background="@drawable/custom_border">

        <TextView
            android:id="@+id/main_loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/loginText"
            android:textSize="@dimen/button_textSize"
            android:textColor="@color/White" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/backgroundLogin_register">

        <TextView
            android:id="@+id/main_newAccountext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/registerText"
            android:textSize="@dimen/button_textSize"
            android:textColor="@color/White" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_dummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>