<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:baselineAligned="false"
    android:elevation="15dp"
    android:background="@drawable/custom_shadowfooter">

    <RelativeLayout
        android:id="@+id/footerMenu_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/custom_footermenu_gradient">

        <Button
            android:id="@+id/footerBT_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_account_green_48dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/footerBTLarge_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_account_grey600_48dp"
            android:layout_marginTop="5dp" />


        <TextView
            android:id="@+id/footerTV_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/footerBT_profile"
            android:layout_centerHorizontal="true"
            android:textColor="@color/backgroundLogin_button_top"
            android:text="@string/footerMenu_profile"
            android:textStyle="bold"
            android:visibility="invisible"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footerMenu_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@drawable/custom_footermenu_gradient">

        <Button
            android:id="@+id/footerBT_map"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_map_green_48dp"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/footerBTLarge_map"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_map_grey600_48dp"
            android:layout_marginTop="5dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/footerTV_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/footerBT_map"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/backgroundLogin_button_top"
            android:text="@string/footerMenu_map" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footerMenu_share"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/custom_footermenu_gradient">

        <Button
            android:id="@+id/footerBT_share"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_comment_text_multiple_green_48dp"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/footerBTLarge_share"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_comment_text_multiple_grey600_48dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/footerTV_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/footerBT_share"
            android:layout_centerHorizontal="true"
            android:textColor="@color/backgroundLogin_button_top"
            android:text="@string/footerMenu_share"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>